gitlab-pages/cloudops.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cloudops-pages
spec:
  rules:
    - host: cloudops.pages.cloud.statcan.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-gitlab
              servicePort: pages
