gitlab-pages/dataviz-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dataviz-gitlab-pages
spec:
  rules:
    - host: dataviz.pages.cloud.statcan.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-gitlab
              servicePort: pages
