gitlab-pages/digital-innovation-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: digital-innovation-gitlab-pages
spec:
  rules:
    - host: digital-innovation.pages.cloud.statcan.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-gitlab
              servicePort: pages
