gitlab-pages/uxdc.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: uxdc-pages
spec:
  rules:
    - host: uxdc.pages.cloud.statcan.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-gitlab
              servicePort: pages
