gitlab-pages/wcms-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wcms-gitlab-pages
spec:
  rules:
    - host: wcms.pages.cloud.statcan.ca
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab-gitlab
              servicePort: pages
